tests/negative_tests/imports/invalidImport2.sa
module invalidImport2 where
    import baseImport

    x = baseImport.y

    z : Bool -> Bool
    z = baseImport.x